# ies-ontology-template

./: .gitignore  CHANGELOG.md  LICENCE  README.adoc  README.md  VERSION  catalog.xml  justfile  pyproject.toml
.github/: README.md
.github/ISSUE_TEMPLATE/: create-feature.yml  feature-request.yml  issue-bug.yml  issue-doc.yml  issue-feature.yml
.github/workflows/: README-create-ontology-repo.md  README-feature-workflows.md  README-sync-ies-tools.md  README_update_workflows.md  create-feature.yml  create-ontology-repo.yml  feature-development.yml  feature-request.yml  issue-bug.yml  issue-doc.yml  ontology-qa-review.yml  ontology-release-candidate.yml  ontology-validation.yml  pr-checks.yml  setup-labels.yml  sync-config.yaml  sync-ies-tools.yml  sync-tools.yml
docs/: COMMITIZEN.md  CONTRIBUTING.md  README.md  ontology-development-design.adoc  ontology-development-design.md
docs/diagrams/: branch-flows.mmd  ontology-overview.dot
docs/requirements/: requirements.md
ies-tools/: README.md
ies-tools/src/github-tools/: README-how-to-setup-gh-for-team-members.md  README.md  github.py
ies-tools/src/just/: README.adoc  common.just
imports/: catalog-v001.xml
src/: README.md
src/data/: data.ttl
src/ontology/: ontology.trig  ontology.ttl
tests/: README.md
tests/integration/use-cases/: use-case-1.sparql
tests/test-data/: test-data.ttl
tests/unit/class-hierarchy/: class-hierarchy-tests.sparql
tests/unit/properties/: property-tests.sparql
tests/unit/terms/: term-tests.sparql
