[tool.poetry]
name = "ies-tools"
version = "0.1.0"
description = "Shared IES automation tools"
authors = ["aigora-de <23141680+aigora-de@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ies-tools"}]
repository = "https://github.com/Acme-Ontologies/ies-ontology-template"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.scripts]
ies-build = "ies-tools.src.build.build:cli"
gh-tools = "ies-tools.src.github-tools.github:cli"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12.20240917"
types-redis = "^4.6.0.20241004"
types-requests = "^2.32.0.20241016"
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^2.17.3"
pytest-flask = "^1.3.0"
pytest = "^8.3.3"

[tool.isort]
profile = "black"
line_length = 80

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
